--- a/.github/workflows/cron-job.yml
+++ b/.github/workflows/cron-job.yml
@@ -2,7 +2,7 @@ name: Run Golf Leaderboard Scraper
 
 on:
   schedule:
-    - cron: '/20 * * * *'
+    - cron: '*/20 * * * *'
   workflow_dispatch: # Allows manual trigger
 
 jobs:
