--- a/.github/workflows/cron-job.yml
+++ b/.github/workflows/cron-job.yml
@@ -1,18 +1,13 @@
-name: Run Golf Scrapers
+name: Run Golf Leaderboard Scraper
 
 on:
   schedule:
-    - cron: '*/20 * * * 4' # Runs every 20 minutes on Thursday
-    - cron: '*/20 * * * 5' # Runs every 20 minutes on Friday
-    - cron: '*/20 * * * 6' # Runs every 20 minutes on Saturday
-    - cron: '*/20 * * * 0' # Runs every 20 minutes on Sunday
-    - cron: '0 12 * * 3' # Runs every Wednesday at 12:00 PM (Noon)
+    - cron: '*/20 * * * *'
   workflow_dispatch: # Allows manual trigger
 
 jobs:
-  leaderboard-scraper:
-    runs-on: ubuntu-latest
-    if: contains('4 5 6 7', format('{0}', github.event.schedule))
+  run-script:
+    runs-on: ubuntu-latest # Use a Linux environment
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -26,8 +21,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Run Leaderboard Scraper
+      - name: Run Scraper
         run: python scraper.py
 
       - name: Upload SQLite Database
@@ -35,8 +29,3 @@ jobs:
         with:
           name: pga-data
           path: pga-data.db
-
-  field-scraper:
-    runs-on: ubuntu-latest
-    if: github.event.schedule == '0 12 * * 3'
-    steps:
