--- a/.github/workflows/cron-job.yml
+++ b/.github/workflows/cron-job.yml
@@ -2,7 +2,10 @@ name: Run Golf Leaderboard Scraper
 
 on:
   schedule:
-    - cron: '*/20 * * * *'
+    - cron: '*/20 * * * 4'
+    - cron: '*/20 * * * 5'
+    - cron: '*/20 * * * 6'
+    - cron: '*/20 * * * 0'
   workflow_dispatch: # Allows manual trigger
 
 jobs:
